--- a/style.css
+++ b/style.css
@@ -21,8 +21,17 @@
 .bg-dumbdog {
   background-image: url("https://images.unsplash.com/photo-1614261812340-5ee9a3ed33a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80");
   background-repeat: no-repeat;
-  background-position: 0px -230px;
+  background-position: relative;
   background-size: cover;
+}
+
+@media (min-width:756px) {
+  .bg-dumbdog {
+    background-image: url("https://images.unsplash.com/photo-1614261812340-5ee9a3ed33a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80");
+    background-repeat: no-repeat;
+    background-position: 0px -230px;
+    background-size: cover;
+  }
 }
 
 .icon-card-shadow {
@@ -33,6 +42,60 @@
   box-shadow: 3px 6px 12px #888888
 }
 
+/*  */
+@media (min-width:758px) {
+  .dropbtn {
+    background-color: #07AB80;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.dropbtn {
+  background-color: #07AB80;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  right: 0;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #046149;
+}
+
 .move-down {
   transform: translateY(0%);
 }
@@ -40,5 +103,24 @@
 @media (min-width: 768px) {
   .move-down {
     transform: translateY(50%);
+  }
+}
+
+.green-menu {
+  border: #046149;
+  background-color: #046149;
+}
+
+.scroll-margin {
+  scroll-margin-top: 6em;
+}
+
+.text-darken {
+  color: #898989;
+}
+
+@media (min-width:768px) {
+  .text-darken {
+    color: #f8f9fa;
   }
 }
